stylesheet.scss: fix: odd scroller on safari

--- a/src/styles/imports/_mediaQueries.scss
+++ b/src/styles/imports/_mediaQueries.scss
@@ -1,4 +1,7 @@
 @media (max-width: 618px) { // Mobile
+  .page {
+    -webkit-overflow-scrolling: touch;
+  }
   .page__section--content {
     padding: 0 2.5pc;
     user-select: none;
@@ -28,4 +31,39 @@
   .page__section--content {
     padding: 0 15pc;
   }
+}
+
+/* fix iOS bug not displaying 100vh correctly */
+/* ipad */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+	.page {
+		height: 768px;
+	}
+}
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+	.page {
+		height: 1024px;
+	}
+}
+/* iphone5 */
+@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
+	.page {
+		height: 320px;
+	}
+}
+@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
+	.page {
+		height: 568px;
+	}
+}
+/* iPhone 4 */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
+	.page {
+		height: 320px;
+	}
+}
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
+	.page {
+		height: 480px;
+	}
 }
